@@ -1,5 +1,6 @@
 package africa.semicolon.services;
 
+import africa.semicolon.data.models.Comment;
 import africa.semicolon.data.models.Post;
 import africa.semicolon.data.models.User;
 import africa.semicolon.data.repositories.PostRepository;
@@ -36,65 +37,66 @@ public class UserServicesImplTest {
     @Autowired
     CommentServices commentServices;
 
+    private  UserRegisterRequest userRegisterRequest;
+    private UserLoginRequest userLoginRequest;
+    private CreatePostRequest createPostRequest;
+    private ViewPostRequest viewPostRequest;
+    private CommentPostRequest commentPostRequest;
+
+
+
+
 
     @BeforeEach
     public void setUp() {
         userRepository.deleteAll();
         postRepository.deleteAll();
         viewRepository.deleteAll();
-    }
 
-    @Test
-    public void registerOneUser_userCountIsOne(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
+        userRegisterRequest = new UserRegisterRequest();
         userRegisterRequest.setFirstName("Firstname");
         userRegisterRequest.setLastName("Lastname");
         userRegisterRequest.setPassword("password");
         userRegisterRequest.setUsername("username");
-        userServices.register(userRegisterRequest);
 
+        userLoginRequest = new UserLoginRequest();
+        userLoginRequest.setUsername("username");
+        userLoginRequest.setPassword("password");
+
+        createPostRequest = new CreatePostRequest();
+        createPostRequest.setAuthor("username");
+        createPostRequest.setTitle("Title");
+        createPostRequest.setContent("Content");
+
+        viewPostRequest = new ViewPostRequest();
+        commentPostRequest = new CommentPostRequest();
+    }
+
+    @Test
+    public void registerOneUser_userCountIsOne(){
+        userServices.register(userRegisterRequest);
         assertEquals(1, userRepository.count());
     }
 
     @Test
     public void registerOneUser_anotherUserCantUseSameUsername_throwException(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1, userRepository.count());
-
         assertThrows(UserAlreadyExistException.class, ()->userServices.register(userRegisterRequest));
     }
 
     @Test
     public void registerOneUser_userCanLogin(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1, userServices.countNoOfUsers());
         assertFalse(userServices.isUserLoggedIn("username"));
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
-
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
     }
 
     @Test
     public void registerOneUser_userCantLoginWithWrongDetails(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1, userServices.countNoOfUsers());
         assertFalse(userServices.isUserLoggedIn("username"));
@@ -107,18 +109,10 @@ public class UserServicesImplTest {
 
     @Test
     public void registerOneUser_userCanLogin_userCanLogout(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1, userServices.countNoOfUsers());
         assertFalse(userServices.isUserLoggedIn("username"));
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
 
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
@@ -131,24 +125,12 @@ public class UserServicesImplTest {
 
     @Test
     public void registerOneUser_userCanCreatePost(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1L, userServices.countNoOfUsers());
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
 
-        CreatePostRequest createPostRequest = new CreatePostRequest();
-        createPostRequest.setAuthor("username");
-        createPostRequest.setTitle("Title");
-        createPostRequest.setContent("Content");
         userServices.createPost(createPostRequest);
         assertEquals(1, userServices.getNoOfUserPosts("username"));
         assertEquals(1, postServices.countNoOfPosts());
@@ -156,42 +138,21 @@ public class UserServicesImplTest {
 
     @Test
     public void registerOneUser_userCantCreatePostWithoutLogin_throwsException(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1L, userServices.countNoOfUsers());
 
-        CreatePostRequest createPostRequest = new CreatePostRequest();
-        createPostRequest.setAuthor("username");
-        createPostRequest.setTitle("Title");
-        createPostRequest.setContent("Content");
         assertThrows(UserNotLoggedInException.class, ()->userServices.createPost(createPostRequest));
         assertEquals(0, userServices.getNoOfUserPosts("username"));
     }
 
     @Test
     public void registerOneUser_userCanCreatePost_userCanDeletePost(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1L, userServices.countNoOfUsers());
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
 
-        CreatePostRequest createPostRequest = new CreatePostRequest();
-        createPostRequest.setAuthor("username");
-        createPostRequest.setTitle("Title");
-        createPostRequest.setContent("Content");
         userServices.createPost(createPostRequest);
         assertEquals(1, userServices.getNoOfUserPosts("username"));
         assertEquals(1, postServices.countNoOfPosts());
@@ -209,24 +170,12 @@ public class UserServicesImplTest {
 
     @Test
     public void userRegister_create3Post_userCanFindAllPost(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1L, userServices.countNoOfUsers());
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
 
-        CreatePostRequest createPostRequest = new CreatePostRequest();
-        createPostRequest.setAuthor("username");
-        createPostRequest.setTitle("Title");
-        createPostRequest.setContent("Content");
         userServices.createPost(createPostRequest);
         userServices.createPost(createPostRequest);
         userServices.createPost(createPostRequest);
@@ -240,69 +189,65 @@ public class UserServicesImplTest {
 
     @Test
     public void onePostCreated_userCanViewPost(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1L, userServices.countNoOfUsers());
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
 
-        CreatePostRequest createPostRequest = new CreatePostRequest();
-        createPostRequest.setAuthor("username");
-        createPostRequest.setTitle("Title");
-        createPostRequest.setContent("Content");
         userServices.createPost(createPostRequest);
         assertEquals(1, postServices.countNoOfPosts());
 
         User user = userServices.findUserByName("username");
-        Post post = postServices.findPostById(user.getPosts().get(0).getId());
+        Post post = postServices.findPostById(user.getPosts().getFirst().getId());
         assertEquals(0, post.getViews().size());
 
-        ViewPostRequest viewPostRequest = new ViewPostRequest();
         viewPostRequest.setViewer(user);
         viewPostRequest.setPostId(post.getId());
         userServices.viewPost(viewPostRequest);
 
-        post = postServices.findPostById(user.getPosts().get(0).getId());
+        post = postServices.findPostById(user.getPosts().getFirst().getId());
         assertEquals(1, post.getViews().size());
         assertEquals(1L, viewServices.countNoOfViews());
     }
 
     @Test
     public void onePostCreated_userCanCommentOnPost(){
-        UserRegisterRequest userRegisterRequest = new UserRegisterRequest();
-        userRegisterRequest.setFirstName("Firstname");
-        userRegisterRequest.setLastName("Lastname");
-        userRegisterRequest.setPassword("password");
-        userRegisterRequest.setUsername("username");
         userServices.register(userRegisterRequest);
         assertEquals(1L, userServices.countNoOfUsers());
 
-        UserLoginRequest userLoginRequest = new UserLoginRequest();
-        userLoginRequest.setUsername("username");
-        userLoginRequest.setPassword("password");
         userServices.login(userLoginRequest);
         assertTrue(userServices.isUserLoggedIn("useRNAME"));
 
-        CreatePostRequest createPostRequest = new CreatePostRequest();
-        createPostRequest.setAuthor("username");
-        createPostRequest.setTitle("Title");
-        createPostRequest.setContent("Content");
         userServices.createPost(createPostRequest);
         assertEquals(1, postServices.countNoOfPosts());
 
         User user = userServices.findUserByName("username");
-        Post post = postServices.findPostById(user.getPosts().get(0).getId());
+        Post post = postServices.findPostById(user.getPosts().getFirst().getId());
         assertEquals(0, post.getViews().size());
 
-        CommentPostRequest commentPostRequest = new CommentPostRequest();
+        commentPostRequest.setCommenter(user);
+        commentPostRequest.setPostId(post.getId());
+        commentPostRequest.setComment("Comment on this post");
+        userServices.addComment(commentPostRequest);
+
+
+        post = postServices.findPostById(user.getPosts().getFirst().getId());
+        assertEquals(1, post.getComments().size());
+        assertEquals(1L, commentServices.countNoOfViews());
+    }
+
+     @Test
+    public void onePostCreated_userCanCommentOnPost_userCanDeleteComment(){
+        userServices.register(userRegisterRequest);
+
+        userServices.login(userLoginRequest);
+
+        userServices.createPost(createPostRequest);
+
+        User user = userServices.findUserByName("username");
+        Post post = postServices.findPostById(user.getPosts().get(0).getId());
+
         commentPostRequest.setCommenter(user);
         commentPostRequest.setPostId(post.getId());
         commentPostRequest.setComment("Comment on this post");
@@ -310,7 +255,16 @@ public class UserServicesImplTest {
 
 
         post = postServices.findPostById(user.getPosts().get(0).getId());
-        assertEquals(1, post.getComments().size());
-        assertEquals(1L, commentServices.countNoOfViews());
+
+        Comment comment = commentServices.findCommentById(post.getComments().get(0).getId());
+
+        DeleteCommentRequest deleteCommentREquest = new DeleteCommentRequest();
+        deleteCommentREquest.setPostId(post.getId());
+        deleteCommentREquest.setCommentId(comment.getId());
+        userServices.deleteComment(deleteCommentREquest);
+
+        post = postServices.findPostById(user.getPosts().get(0).getId());
+        assertEquals(0, post.getComments().size());
+        assertEquals(0, commentServices.countNoOfViews());
     }
 }
